<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/vertical_padding"
    android:id="@+id/root">


    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="0.15"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp"
        android:text="@string/welcome_text"
        android:textColor="@color/colorHeader"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/montaga"

            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/app_description"
            android:textSize="20sp" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_sign_up"
            android:background="@drawable/btn_auth"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/signUp_button_text" />

        <Button
            android:id="@+id/bt_sign_in"
            android:background="@drawable/btn_auth"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/signIn_button_text" />
    </LinearLayout>
    <Button
        android:id="@+id/bt_ignore_auth"
        android:background="@drawable/btn_skip_auth"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/auth_ignore_button_text"/>

</LinearLayout>
