<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ending_questionnaire_message"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/tv_interpretation_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending_questionnaire_description"
        android:textSize="17sp"
        android:textStyle="normal"
        android:textColor="@color/secondary_text"
        android:padding="20dp"
        android:gravity="center"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/bt_close_questionnaire"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/ok_text"
        android:textColor="@color/primary_text"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:background="@drawable/search_button"/>

</LinearLayout>