<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_sign_up_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_description"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="3dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/primary"
            app:met_primaryColor="@color/primary_dark"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName_description"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="3dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/primary"
            app:met_primaryColor="@color/primary_dark"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_sign_up_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName_description"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="3dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/primary"
            app:met_primaryColor="@color/primary_dark"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_description"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="3dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/primary"
            app:met_primaryColor="@color/primary_dark"
            app:met_singleLineEllipsis="true"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_description"
            android:inputType="textPassword"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_margin="3dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/primary"
            app:met_primaryColor="@color/primary_dark"
            app:met_singleLineEllipsis="true"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_sign_up_form_button"
            android:layout_width="100dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/signUp_button_text"
            android:textColor="@color/primary_text"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:background="@drawable/search_button"/>

        <Button
            android:id="@+id/bt_sign_up_form_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/cancle_button_text"
            android:textColor="@color/primary_text"
            android:layout_margin="20dp"
            android:padding="5dp"
            android:background="@drawable/search_button"/>

    </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>